--- a/gameDev.html
+++ b/gameDev.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,7 +18,7 @@
     <script type="text/javascript">
         var canvas = document.getElementById('myCanvas');
         var ctx = canvas.getContext('2d');
-        
+		//test        
         let screenWidth = 1000;
         let screenHeight = 500;
         var isGameLive = true;
