--- a/gameDev.html
+++ b/gameDev.html
@@ -18,7 +18,7 @@
     <script type="text/javascript">
         var canvas = document.getElementById('myCanvas');
         var ctx = canvas.getContext('2d');
-		//test        
+		//test change
         let screenWidth = 1000;
         let screenHeight = 500;
         var isGameLive = true;
